# anvil

./: .gitignore  README.md  pyproject.toml
anvil/: __init__.py  cli.py  config.py  evaluate.py  judge.py  train.py
configs/: anvil_config.example.yaml
tests/: conftest.py  test_config.py  test_evaluate.py  test_judge.py
